# ProgramBench-experiments

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: bump_version.py
.github/workflows/: release.yaml  test.yml
docs/: README.md
example-outputs/: README-best-of-5.md
example-outputs/cc-opus-easy10-v2-C-1/: README.md
example-outputs/cc-opus-easy10-v2-C-2/: README.md
example-outputs/cc-opus-easy10-v2-C-2/harness/: eval_monitor.sh
example-outputs/cc-opus-easy10-v2-C-3/: README.md
example-outputs/cc-opus-easy10-v2-C-4/: README.md
example-outputs/cc-opus-easy10-v2-C-5/: README.md
example-outputs/opus-4.7-mini-swe/abishekvashok__cmatrix.5c082c6/: abishekvashok__cmatrix.5c082c6.eval.json
example-outputs/qwen3-32b-mini-swe/abishekvashok__cmatrix.5c082c6/: trajectory.json
exp-traces/: README-best-of-5.md
exp-traces/cc-opus-easy10-v2-C-1/: README.md
exp-traces/cc-opus-easy10-v2-C-2/: README.md
exp-traces/cc-opus-easy10-v2-C-3/: README.md
exp-traces/cc-opus-easy10-v2-C-4/: README.md
exp-traces/cc-opus-easy10-v2-C-5/: README.md
exp-traces/figures/: writeup.md
opus-experiment/: CLAUDE.md
opus-experiment/harness/: container_entrypoint.sh  convert_trajectory.py  eval_monitor_top9.sh  install-cc.sh  kill_zombies_safe.sh  publish_to_s3.sh  run_task.sh  tasks_easy10.yaml  tasks_smoke.yaml
scripts/: README.md  anthropic_oauth.py  programbench_mini.py  run_claude_code.sh  setup.sh
src/programbench/: __init__.py  constants.py  container.py  exceptions.py
tests/: test_eval.py  test_smoke.py
(+733 files in other folders)
