[project]
name = "programbench"
version = "1.0.1"
description = "Evaluate whether LM-based SWE-agents can reverse-engineer black-box software systems"
readme = "README.md"
authors = [
    { name = "Kilian Adriano Lieret", email = "klieret@meta.com" },
    { name = "John Yang", email = "johnby@meta.com" }
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15",
    "jinja2>=3.1",
    "pydantic>=2",
    "junitparser>=3",
    "pyyaml>=6",
    "tqdm>=4",
    "rich>=13",
    "huggingface_hub>=0.20",
    "openai>=2.36.0",
]

[project.scripts]
programbench = "programbench.cli.main:app"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
